--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -9,10 +9,8 @@ on:
 env:
   SONAR_SCANNER_VERSION: "6.1.0.4477"
   SONAR_SCANNER_HOME: "${{ github.workspace }}/sonar-scanner"
-  GIT_USER_NAME: "anupam.singh"
-  GIT_USER_EMAIL: "anupam.singh@beehyv.com"
-  # Poetry configuration (uncomment if needed)
-  # POETRY_VERSION_PART: ""
+  GIT_USER_NAME: "CI BOT"
+  GIT_USER_EMAIL: "ci-bot@beehyv.com"
 
 jobs:
   test:
@@ -44,7 +42,7 @@ jobs:
       
       - name: Run tests
         run: |
-          poetry run pytest
+          poetry run pytest --envfile=.env
 
   scan:
     name: SonarQube Scan
@@ -52,7 +50,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch all history for better SonarQube analysis
+          fetch-depth: 0
       
       - name: Set up Git
         run: |
@@ -75,6 +73,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
         run: |
           # Get PR number for pull request events
           PR_NUMBER=${{ github.event.pull_request.number }}
@@ -82,6 +81,7 @@ jobs:
           if [ -n "$PR_NUMBER" ]; then
             # For pull requests
             sonar-scanner \
+              -D"sonar.projectKey=${SONAR_PROJECT_KEY}" \
               -D"sonar.sources=." \
               -D"sonar.host.url=${SONAR_HOST_URL}" \
               -D"sonar.token=${SONAR_TOKEN}" \
@@ -91,6 +91,7 @@ jobs:
           else
             # For branch pushes
             sonar-scanner \
+              -D"sonar.projectKey=${SONAR_PROJECT_KEY}" \
               -D"sonar.sources=." \
               -D"sonar.host.url=${SONAR_HOST_URL}" \
               -D"sonar.token=${SONAR_TOKEN}" \
